--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 .topheader{
     display: flex;
     justify-content: space-between;
-    padding: 1rem 1.5rem;
+    padding: 1rem 3rem;
 }
 
 .logo{
@@ -23,4 +23,41 @@
     margin-right: 0.5rem;
     padding: 0.2rem 0.5rem;
     background: cornflowerblue;
+}
+
+
+.all-menu{
+    display: flex;
+    justify-content: space-between;
+    padding: 1rem 3rem;
+
+}
+
+.all-menu a{
+    color: #000;
+    text-decoration: none;
+    font-weight: bold;
+    padding: 0.5rem;
+    border-radius: .2rem;
+    transition: .2s ease-in-out cubic-bezier(0.25, 0.46, 0.45, 0.94);
+    &:hover{
+        text-decoration: underline;
+        color: darkblue;
+        background-color:cornflowerblue;
+        color: #FFF;
+        transition: .2s ease-in-out cubic-bezier(0.25, 0.46, 0.45, 0.94);
+    }
+}
+
+.blog{
+background-color: #F9F9F9;
+ display: flex;
+ justify-content: center;
+ padding: 1rem;
+ margin: 1.5rem 3rem;
+ border-radius: .5rem;
+}
+
+.content{
+    margin-left: 2rem;
 }
